caldera/app/cddl/gen/cddlParser.py
# Generated from C:/Users/dpmiller/projects/caldera/caldera/app/cddl\cddl.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class cddlParser ( Parser ):

    grammarFileName = "cddl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Name:'", "'Description:'", "'Knowns:'", 
                     "':'", "'['", "','", "']'", "'Where:'", "'Effects:'", 
                     "'if'", "'{'", "'}'", "'elif'", "'else'", "'create'", 
                     "'know'", "'forget'", "'for'", "'in'", "'pass'", "'='", 
                     "'.'", "'('", "')'", "'not'", "'exist'", "'True'", 
                     "'False'", "'!='", "'=='", "'and'", "'or'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "STRING", "ID", "COMMENT", "WS" ]

    RULE_actions = 0
    RULE_action = 1
    RULE_name = 2
    RULE_description = 3
    RULE_knowns = 4
    RULE_known = 5
    RULE_known_assign = 6
    RULE_wheres = 7
    RULE_where_expr = 8
    RULE_effects = 9
    RULE_stmts = 10
    RULE_stmt = 11
    RULE_knows_object = 12
    RULE_obj_create = 13
    RULE_eq_list = 14
    RULE_obj = 15
    RULE_expr = 16
    RULE_bool_val = 17
    RULE_comp = 18
    RULE_bin_comp = 19

    ruleNames =  [ "actions", "action", "name", "description", "knowns", 
                   "known", "known_assign", "wheres", "where_expr", "effects", 
                   "stmts", "stmt", "knows_object", "obj_create", "eq_list", 
                   "obj", "expr", "bool_val", "comp", "bin_comp" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    STRING=33
    ID=34
    COMMENT=35
    WS=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ActionsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(cddlParser.EOF, 0)

        def action(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cddlParser.ActionContext)
            else:
                return self.getTypedRuleContext(cddlParser.ActionContext,i)


        def getRuleIndex(self):
            return cddlParser.RULE_actions

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterActions" ):
                listener.enterActions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitActions" ):
                listener.exitActions(self)




    def actions(self):

        localctx = cddlParser.ActionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_actions)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 40
                self.action()
                self.state = 43 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << cddlParser.T__0) | (1 << cddlParser.T__1) | (1 << cddlParser.T__2))) != 0)):
                    break

            self.state = 45
            self.match(cddlParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ActionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def knowns(self):
            return self.getTypedRuleContext(cddlParser.KnownsContext,0)


        def effects(self):
            return self.getTypedRuleContext(cddlParser.EffectsContext,0)


        def name(self):
            return self.getTypedRuleContext(cddlParser.NameContext,0)


        def description(self):
            return self.getTypedRuleContext(cddlParser.DescriptionContext,0)


        def wheres(self):
            return self.getTypedRuleContext(cddlParser.WheresContext,0)


        def getRuleIndex(self):
            return cddlParser.RULE_action

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAction" ):
                listener.enterAction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAction" ):
                listener.exitAction(self)




    def action(self):

        localctx = cddlParser.ActionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_action)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==cddlParser.T__0:
                self.state = 47
                self.name()


            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==cddlParser.T__1:
                self.state = 50
                self.description()


            self.state = 53
            self.knowns()
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==cddlParser.T__7:
                self.state = 54
                self.wheres()


            self.state = 57
            self.effects()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(cddlParser.ID, 0)

        def getRuleIndex(self):
            return cddlParser.RULE_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterName" ):
                listener.enterName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitName" ):
                listener.exitName(self)




    def name(self):

        localctx = cddlParser.NameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(cddlParser.T__0)
            self.state = 60
            self.match(cddlParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DescriptionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(cddlParser.STRING, 0)

        def getRuleIndex(self):
            return cddlParser.RULE_description

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDescription" ):
                listener.enterDescription(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDescription" ):
                listener.exitDescription(self)




    def description(self):

        localctx = cddlParser.DescriptionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_description)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(cddlParser.T__1)
            self.state = 63
            self.match(cddlParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class KnownsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def known(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cddlParser.KnownContext)
            else:
                return self.getTypedRuleContext(cddlParser.KnownContext,i)


        def getRuleIndex(self):
            return cddlParser.RULE_knowns

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKnowns" ):
                listener.enterKnowns(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKnowns" ):
                listener.exitKnowns(self)




    def knowns(self):

        localctx = cddlParser.KnownsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_knowns)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(cddlParser.T__2)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==cddlParser.ID:
                self.state = 66
                self.known()
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class KnownContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(cddlParser.ID, 0)

        def known_assign(self):
            return self.getTypedRuleContext(cddlParser.Known_assignContext,0)


        def getRuleIndex(self):
            return cddlParser.RULE_known

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKnown" ):
                listener.enterKnown(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKnown" ):
                listener.exitKnown(self)




    def known(self):

        localctx = cddlParser.KnownContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_known)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(cddlParser.ID)
            self.state = 73
            self.match(cddlParser.T__3)
            self.state = 74
            self.known_assign()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Known_assignContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(cddlParser.ID, 0)

        def known_assign(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cddlParser.Known_assignContext)
            else:
                return self.getTypedRuleContext(cddlParser.Known_assignContext,i)


        def getRuleIndex(self):
            return cddlParser.RULE_known_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKnown_assign" ):
                listener.enterKnown_assign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKnown_assign" ):
                listener.exitKnown_assign(self)




    def known_assign(self):

        localctx = cddlParser.Known_assignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_known_assign)
        self._la = 0 # Token type
        try:
            self.state = 89
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.match(cddlParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                self.match(cddlParser.ID)
                self.state = 78
                self.match(cddlParser.T__4)
                self.state = 79
                self.known_assign()
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==cddlParser.T__5:
                    self.state = 80
                    self.match(cddlParser.T__5)
                    self.state = 81
                    self.known_assign()
                    self.state = 86
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 87
                self.match(cddlParser.T__6)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WheresContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def where_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cddlParser.Where_exprContext)
            else:
                return self.getTypedRuleContext(cddlParser.Where_exprContext,i)


        def getRuleIndex(self):
            return cddlParser.RULE_wheres

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWheres" ):
                listener.enterWheres(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWheres" ):
                listener.exitWheres(self)




    def wheres(self):

        localctx = cddlParser.WheresContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_wheres)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(cddlParser.T__7)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==cddlParser.ID:
                self.state = 92
                self.where_expr()
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Where_exprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def obj(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cddlParser.ObjContext)
            else:
                return self.getTypedRuleContext(cddlParser.ObjContext,i)


        def comp(self):
            return self.getTypedRuleContext(cddlParser.CompContext,0)


        def getRuleIndex(self):
            return cddlParser.RULE_where_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhere_expr" ):
                listener.enterWhere_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhere_expr" ):
                listener.exitWhere_expr(self)




    def where_expr(self):

        localctx = cddlParser.Where_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_where_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.obj()
            self.state = 99
            self.comp()
            self.state = 100
            self.obj()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EffectsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmts(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cddlParser.StmtsContext)
            else:
                return self.getTypedRuleContext(cddlParser.StmtsContext,i)


        def getRuleIndex(self):
            return cddlParser.RULE_effects

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEffects" ):
                listener.enterEffects(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEffects" ):
                listener.exitEffects(self)




    def effects(self):

        localctx = cddlParser.EffectsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_effects)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(cddlParser.T__8)
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << cddlParser.T__9) | (1 << cddlParser.T__14) | (1 << cddlParser.T__15) | (1 << cddlParser.T__16) | (1 << cddlParser.T__17) | (1 << cddlParser.T__19))) != 0):
                self.state = 103
                self.stmts()
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cddlParser.StmtContext)
            else:
                return self.getTypedRuleContext(cddlParser.StmtContext,i)


        def getRuleIndex(self):
            return cddlParser.RULE_stmts

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmts" ):
                listener.enterStmts(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmts" ):
                listener.exitStmts(self)




    def stmts(self):

        localctx = cddlParser.StmtsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_stmts)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 109
                    self.stmt()

                else:
                    raise NoViableAltException(self)
                self.state = 112 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return cddlParser.RULE_stmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PassContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a cddlParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPass" ):
                listener.enterPass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPass" ):
                listener.exitPass(self)


    class CreateContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a cddlParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def obj_create(self):
            return self.getTypedRuleContext(cddlParser.Obj_createContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreate" ):
                listener.enterCreate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreate" ):
                listener.exitCreate(self)


    class ForContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a cddlParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(cddlParser.ID, 0)
        def obj(self):
            return self.getTypedRuleContext(cddlParser.ObjContext,0)

        def stmts(self):
            return self.getTypedRuleContext(cddlParser.StmtsContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor" ):
                listener.enterFor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor" ):
                listener.exitFor(self)


    class ForgetContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a cddlParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def knows_object(self):
            return self.getTypedRuleContext(cddlParser.Knows_objectContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForget" ):
                listener.enterForget(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForget" ):
                listener.exitForget(self)


    class KnowsContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a cddlParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def knows_object(self):
            return self.getTypedRuleContext(cddlParser.Knows_objectContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKnows" ):
                listener.enterKnows(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKnows" ):
                listener.exitKnows(self)


    class IfContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a cddlParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cddlParser.ExprContext)
            else:
                return self.getTypedRuleContext(cddlParser.ExprContext,i)

        def stmts(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cddlParser.StmtsContext)
            else:
                return self.getTypedRuleContext(cddlParser.StmtsContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf" ):
                listener.enterIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf" ):
                listener.exitIf(self)



    def stmt(self):

        localctx = cddlParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_stmt)
        self._la = 0 # Token type
        try:
            self.state = 152
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [cddlParser.T__9]:
                localctx = cddlParser.IfContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.match(cddlParser.T__9)
                self.state = 115
                self.expr(0)
                self.state = 116
                self.match(cddlParser.T__10)
                self.state = 117
                self.stmts()
                self.state = 118
                self.match(cddlParser.T__11)
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==cddlParser.T__12:
                    self.state = 119
                    self.match(cddlParser.T__12)
                    self.state = 120
                    self.expr(0)
                    self.state = 121
                    self.match(cddlParser.T__10)
                    self.state = 122
                    self.stmts()
                    self.state = 123
                    self.match(cddlParser.T__11)
                    self.state = 129
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==cddlParser.T__13:
                    self.state = 130
                    self.match(cddlParser.T__13)
                    self.state = 131
                    self.match(cddlParser.T__10)
                    self.state = 132
                    self.stmts()
                    self.state = 133
                    self.match(cddlParser.T__11)


                pass
            elif token in [cddlParser.T__14]:
                localctx = cddlParser.CreateContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.match(cddlParser.T__14)
                self.state = 138
                self.obj_create()
                pass
            elif token in [cddlParser.T__15]:
                localctx = cddlParser.KnowsContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 139
                self.match(cddlParser.T__15)
                self.state = 140
                self.knows_object()
                pass
            elif token in [cddlParser.T__16]:
                localctx = cddlParser.ForgetContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 141
                self.match(cddlParser.T__16)
                self.state = 142
                self.knows_object()
                pass
            elif token in [cddlParser.T__17]:
                localctx = cddlParser.ForContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 143
                self.match(cddlParser.T__17)
                self.state = 144
                self.match(cddlParser.ID)
                self.state = 145
                self.match(cddlParser.T__18)
                self.state = 146
                self.obj()
                self.state = 147
                self.match(cddlParser.T__10)
                self.state = 148
                self.stmts()
                self.state = 149
                self.match(cddlParser.T__11)
                pass
            elif token in [cddlParser.T__19]:
                localctx = cddlParser.PassContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 151
                self.match(cddlParser.T__19)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Knows_objectContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def obj(self):
            return self.getTypedRuleContext(cddlParser.ObjContext,0)


        def knows_object(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cddlParser.Knows_objectContext)
            else:
                return self.getTypedRuleContext(cddlParser.Knows_objectContext,i)


        def getRuleIndex(self):
            return cddlParser.RULE_knows_object

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKnows_object" ):
                listener.enterKnows_object(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKnows_object" ):
                listener.exitKnows_object(self)




    def knows_object(self):

        localctx = cddlParser.Knows_objectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_knows_object)
        self._la = 0 # Token type
        try:
            self.state = 167
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.obj()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 155
                self.obj()
                self.state = 156
                self.match(cddlParser.T__4)
                self.state = 157
                self.knows_object()
                self.state = 162
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==cddlParser.T__5:
                    self.state = 158
                    self.match(cddlParser.T__5)
                    self.state = 159
                    self.knows_object()
                    self.state = 164
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 165
                self.match(cddlParser.T__6)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Obj_createContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(cddlParser.ID, 0)

        def eq_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cddlParser.Eq_listContext)
            else:
                return self.getTypedRuleContext(cddlParser.Eq_listContext,i)


        def getRuleIndex(self):
            return cddlParser.RULE_obj_create

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObj_create" ):
                listener.enterObj_create(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObj_create" ):
                listener.exitObj_create(self)




    def obj_create(self):

        localctx = cddlParser.Obj_createContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_obj_create)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.match(cddlParser.ID)
            self.state = 170
            self.match(cddlParser.T__4)
            self.state = 171
            self.eq_list()
            self.state = 176
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==cddlParser.T__5:
                self.state = 172
                self.match(cddlParser.T__5)
                self.state = 173
                self.eq_list()
                self.state = 178
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 179
            self.match(cddlParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Eq_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(cddlParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(cddlParser.ExprContext,0)


        def getRuleIndex(self):
            return cddlParser.RULE_eq_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEq_list" ):
                listener.enterEq_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEq_list" ):
                listener.exitEq_list(self)




    def eq_list(self):

        localctx = cddlParser.Eq_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_eq_list)
        try:
            self.state = 185
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 181
                self.match(cddlParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 182
                self.match(cddlParser.ID)
                self.state = 183
                self.match(cddlParser.T__20)
                self.state = 184
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ObjContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
